--- a/testing_jasmine/SpecRunner.html
+++ b/testing_jasmine/SpecRunner.html
@@ -12,10 +12,12 @@
   <script src="lib/jasmine-2.4.1/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/HelloWorld.js"></script>
+  <!--<script src="src/HelloWorld.js"></script>-->
+  <script src="src/Bowling.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/HelloWorldSpec.js"></script>
+  <!--<script src="spec/HelloWorldSpec.js"></script>-->
+  <script src="spec/BowlingSpec.js"></script>
 
 </head>
 
