Add the files for sinatra

--- a/testing_jasmine/SpecRunner.html
+++ b/testing_jasmine/SpecRunner.html
@@ -13,11 +13,13 @@
 
   <!-- include source files here... -->
   <!--<script src="src/HelloWorld.js"></script>-->
-  <script src="src/Bowling.js"></script>
+  <!--<script src="src/Bowling.js"></script>-->
+  <script src="public/javascripts/Scorer.js"></script>
 
   <!-- include spec files here... -->
   <!--<script src="spec/HelloWorldSpec.js"></script>-->
-  <script src="spec/BowlingSpec.js"></script>
+  <!--<script src="spec/BowlingSpec.js"></script>-->
+  <script src="public/javascripts/ScorerSpec.js"></script>
 
 </head>
 
